# leo-engine

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  main.c  sources.cmake
.github/workflows/: build_runtime.yml  ci.yml  emscripten.yml
cmake/: LeoConfig.cmake.in  leoConfig.cmake.in
docs/: audio.md  c_conventions.md  camera_example.c  camera_example.cpp  ci_strategy.md  cli.md  dependencies.md  design.md  design_notes.md  dev_plan.md  emscripten_build.md  engine_core.md  example_consumer.txt  fix_font.md  font.md  font_playground.cpp  gamepad.md  input_action_mapping.md  keyboard.md  leo-engine-manager-design.md  leo_api_cheat_sheet.md  lua_api.md  lua_validation.md  minimal_template.lua  mouse.md  no_gui_thoughts.md  resouce_pack_concept.md  resource_integration.md  texture_loader.md  value.md  vfs.md
examples/: pong.c  transitions_example.c
frontend/docs/: actor_concept.md
include/: math_utils.h  resource_path_helper.h  version.h
include/leo/: actor.h  animation.h  audio.h  base64.h  camera.h  collision.h  collisions.h  color.h  csv.h  default_font.h  engine.h  engine_config.h  engine_core.h  error.h  export.h  font.h  game.h  gamepad.h  graphics.h  gzip_pack.h  image.h  io.h  json.h  keyboard.h  keys.h  leo.h  leo_export.h  lua_bindings.h  lua_game.h  lua_runtime.h  macos_path_helper.h  mouse.h  pack_compress.h  pack_errors.h  pack_format.h  pack_obfuscate.h  pack_reader.h  pack_util.h  pack_writer.h  pack_zlib.h  (+8 more)
old/: Dockerfile  Makefile  README.md
old/cmake/: leo.pc.in
old/examples/: window_modes_example.c
old/examples/consumer/: CMakeLists.txt  main.c
old/include/leo/: actor.h  audio.h  collisions.h  engine.h  error.h  export.h  font.h  image.h  io.h  json.h  keys.h  leo.h  macos_path_helper.h  pack_compress.h  pack_errors.h  pack_format.h  pack_obfuscate.h  signal.h
old/scripts/: merge_files.sh  test_leo_dll.py
old/src/: collisions.c  csv.c  game.c  gamepad.c  macos_path_helper.c  pack_errors.c  pack_reader.c  pack_writer.c  pack_zlib.c  touch.c
old/tests/: animation_test.cpp  audio_test.cpp  collisions_test.cpp  error_test.cpp  font_step2_load_draw_test.cpp  font_step4_memory_errorpaths_test.cpp  font_step5_vfs_tests.cpp  font_test.cpp  gamepad_test.cpp  image_test.cpp  lua_bindings_test.cpp  macos_path_helper_test.cpp  pack_obfuscation_edges_test.cpp  pack_reader_edges_test.cpp  pack_rw_test.cpp  pack_tamper_test.cpp  pack_writer_norm_test.cpp  pack_zero_and_nospace_test.cpp  pack_zlib_test.cpp  python_compat_test.cpp  signal_test.cpp  window_mode_test.cpp
project_manager/: README.md
resources/images/: animation_test.aseprite
resources/maps/: map.json  map.tmj  map.tmx
resources/scripts/: animation.lua  asteroids.lua  audio.lua  blockade.lua  c64_loading.lua  camera.lua  collisions.lua  defender.lua  donkey_kong.lua  flappy.lua  font.lua  font_demo.lua  font_test.lua  fps_stress.lua  frogger.lua  fs_write.lua  galaxian.lua  game.lua  game_old.lua  gamepad.lua  graphics_demo.lua  keyboard.lua  light_demo.lua  logging.lua  lunar_lander.lua  maze_game.lua  missle_command.lua  mouse.lua  pac-man.lua  parallax.lua  pixel_demo.lua  platformer.lua  pong.lua  racer.lua  scenes.lua  scroll_ui.lua  shapes.lua  space_invaders.lua  split_screen.lua  stub.lua  (+7 more)
runtime/: CMakeLists.txt  README.md
runtime/cmake/: LeoConfig.cmake.in
runtime/include/leo/: engine.h
runtime/tests/: engine_test.cpp
scripts/: combine_source_fils.sh  merge_files.sh
src/: actor.c  animation.c  audio.c  audio.cpp  base64.c  camera.cpp  collision.cpp  collisions.c  csv.c  engine.c  engine_core.cpp  error.c  font.c  font.cpp  game.c  gamepad.c  graphics.c  graphics.cpp  gzip_pack.c  image.c  io.c  json.c  keyboard.c  lua_bindings.c  lua_game.c  lua_runtime.cpp  macos_path_helper.c  main.cpp  math_utils.cpp  miniaudio_impl.cpp  mouse.c  pack_compress.c  pack_errors.c  pack_obfuscate.c  pack_reader.c  pack_util.c  pack_writer.c  pack_zlib.c  resource_path_helper.c  signal.c  (+7 more)
static/: THIRD_PARTY_NOTICES.md
tests/: actor_test.cpp  animation_test.cpp  audio_test.cpp  base64_test.cpp  caller_testing.cpp  collisions_test.cpp  csv_test.cpp  engine_test.cpp  error_test.cpp  font_cache_test.cpp  font_dynamic_rendering_test.cpp  font_step2_load_draw_test.cpp  font_step3_spacing_rotation_test.cpp  font_step5_vfs_tests.cpp  font_test.cpp  game_test.cpp  gamepad_test.cpp  graphics_test.cpp  gzip_pack_test.cpp  image_test.cpp  io_vfs_test.cpp  io_write_test.cpp  json_test.cpp  keyboard_test.cpp  lua_bindings_test.cpp  lua_game_test.cpp  macos_path_helper_test.cpp  macos_path_integration_test.cpp  mouse_test.cpp  pack_reader_edges_test.cpp  pack_rw_test.cpp  pack_tamper_test.cpp  pack_writer_norm_test.cpp  pack_zero_and_nospace_test.cpp  pack_zlib_test.cpp  python_compat_test.cpp  signal_test.cpp  test_audio.cpp  test_engine_core.cpp  test_font.cpp  (+12 more)
